fix: disable defult dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,12 +9,12 @@
     --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     :root {
         --background: #0a0a0a;
         --foreground: #ededed;
     }
-}
+} */
 
 html {
     scroll-behavior: smooth;
